--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -332,7 +332,7 @@ main {
         gap: 50px;
         border-radius: 30px;
         padding: 30px;
-        backdrop-filter: blur(7px);
+        // backdrop-filter: blur(7px);
 
         @include media(992) {
             flex-direction: column-reverse;
